# click_payme_django

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requeirements.txt  setup.py
clickchat/: apps.py  click_authorization.py
clickchat/migrations/: 0002_alter_transaction_id.py
clickup/: apps.py  clickuz.py
config/: urls.py
config/config/: __init__.py  base.py  click_settings.py  payme_settings.py  settings.py
main/: admin.py  click.py  create_payment.py  models.py  urls.py  utils.py
main/migrations/: 0001_initial.py
payme/: bot_telegram.py  models.py  urls.py  views.py
payme/migrations/: 0001_initial.py
payments/: apps.py  methods_subscribe_api.py  views.py
payments/management/commands/: create_payment_user.py
payments/migrations/: 0001_initial.py
